tests/ui/fail/raw_transaction_access.stderr
error[E0624]: method `txn_id` is private
 --> tests/ui/fail/raw_transaction_access.rs:9:24
  |
9 |     let _ = write_unit.txn_id();
  |                        ^^^^^^ private method
  |
 ::: src/api/session.rs
  |
  |     pub(crate) fn txn_id(&self) -> TxnId {
  |     ------------------------------------ private method defined here
